<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_budget">

    <fragment
        android:id="@+id/navigation_budget"
        android:name="com.mtullier.travelapp_v2.ui.budget.BudgetFragment"
        android:label="@string/title_budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/navigation_plan"
        android:name="com.mtullier.travelapp_v2.ui.plan.PlanFragment"
        android:label="@string/title_plan"
        tools:layout="@layout/fragment_plan" />

    <fragment
        android:id="@+id/navigation_convert"
        android:name="com.mtullier.travelapp_v2.ui.convert.ConvertFragment"
        android:label="@string/title_convert"
        tools:layout="@layout/fragment_convert" />
</navigation>