<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/budgetFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.budget.BudgetFragment">

    <LinearLayout
        android:id="@+id/budgetAddLinearLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextBudget"
            android:hint="@string/budget_hint_set"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_margin="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/editText"
            android:padding="12dp"
            android:elevation="4dp"
            android:maxLength="8"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/buttonSetBudget"
            style="@android:style/Widget.Material.Button.Colored"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="4dp"
            android:padding="7dp"
            android:layout_gravity="center_vertical"
            android:text="@string/budget_button_set"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/textLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/budget_bar_amount"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/budget_bar_spent"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/budget_bar_left"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/moneyLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2">

        <TextView
            android:id="@+id/budgetTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/budget_bar_emptyamount"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/spentTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/budget_bar_emptyamount"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/leftTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/budget_bar_emptyamount"
            android:textAlignment="center" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:background="@color/editText"
        android:textColor="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:hint="@string/budget_hint_type"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="12dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:maxLength="7"
        android:ems="17"
        android:inputType="number"
        android:digits="0123456789"
        android:textColor="#00000000"
        android:background="@android:color/transparent"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textViewEnterAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:background="@color/editText"
        android:textColor="@color/colorPrimaryDark"
        android:padding="12dp"
        android:layout_column="0"
        android:elevation="4dp"
        android:layout_row="4"
        android:hint="@string/budget_hint_amount"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"/>

    <EditText
        android:id="@+id/editTextDate"
        android:hint="@string/budget_hint_date"
        android:inputType="date"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@color/editText"
        android:padding="12dp"
        android:elevation="4dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textColor="@color/colorPrimaryDark"
        android:layout_row="5"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:maxLength="8"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/buttonAddData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="6"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/budget_button_add"
        style="@android:style/Widget.Material.Button.Colored"
        android:textColor="@color/colorPrimaryDark"
        android:padding="20dp"
        android:elevation="4dp"/>

    <Button
        android:id="@+id/buttonRetrieveData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_row="7"
        android:text="@string/budget_button_retrieve"
        style="@android:style/Widget.Material.Button.Colored"
        android:textColor="@color/colorPrimaryDark"
        android:padding="20dp"
        android:elevation="4dp"/>

    <Button
        android:id="@+id/buttonResetData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_row="8"
        android:text="@string/budget_button_reset"
        style="@android:style/Widget.Material.Button.Colored"
        android:textColor="@color/colorPrimaryDark"
        android:padding="20dp"
        android:elevation="4dp"/>

</GridLayout>